--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  h3 The image upload pipelining tool!
+  p.
+    Integrating Aliasr in to your image sharing application allows your users to send
+    links to images before they are even finished uploading.
