--- a/views/waiting.jade
+++ b/views/waiting.jade
@@ -6,5 +6,5 @@ block content
         The image you have been linked to is still being uploaded.
         You will be redirected to the image as soon as it finishes uploading.
     p.
-        If your image does not appear soon, click #[a(href='') here] to reload.
+        If the image does not appear soon, click #[a(href='') here] to reload.
     script(src='/javascripts/main.js')
