--- a/views/waiting.jade
+++ b/views/waiting.jade
@@ -7,4 +7,5 @@ block content
         You will be redirected to the image as soon as it finishes uploading.
     p.
         If the image does not appear soon, click #[a(href='') here] to reload.
+    script(src='/socket.io/socket.io.js')
     script(src='/javascripts/main.js')
