Include the amount of aliases on the home page.

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,3 +6,6 @@ block content
   p.
     Integrating Aliasr in to your image sharing application allows your users to send
     links to images before they are even finished uploading.
+  if hasCount
+      p.
+        #{aliasCount} aliases have been created so far.
