--- a/views/waiting.jade
+++ b/views/waiting.jade
@@ -8,4 +8,4 @@ block content
     p.
         If the image does not appear soon, click #[a(href='') here] to reload.
     script(src='https://cdn.socket.io/socket.io-1.0.0.js')
-    script(src='/javascripts/main.js')
+    script(src='/javascripts/redirect.js')
