--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,11 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+    div(class='row text-center')
+        div(class='col-lg-12')
+            div(class='page-header')
+                h1= message
+                p(class='lead')= error.status
+    div(class='row')
+        div(class='col-lg-12')
+            pre #{error.stack}
