--- a/views/waiting.jade
+++ b/views/waiting.jade
@@ -1,11 +1,16 @@
 extends layout
 
 block content
-    h1 Almost there!
-    p.
-        The image you have been linked to is still being uploaded.
-        You will be redirected to the image as soon as it finishes uploading.
-    p.
-        If the image does not appear soon, click #[a(href='') here] to reload.
+    div(class='row text-center')
+        div(class='col-lg-12')
+            div(class='page-header')
+                h1 Almost there!
+    div(class='row')
+        div(class='col-lg-12')
+            p.
+                The image you have been linked to is still being uploaded.
+                You will be redirected to the image as soon as it finishes uploading.
+            p If the image does not appear soon, click #[a(href='') here] to reload.
+block scripts
     script(src='https://cdn.socket.io/socket.io-1.0.0.js')
     script(src='/javascripts/redirect.js')
