Add live updating alias count to home/stats pages

--- a/views/index.jade
+++ b/views/index.jade
@@ -16,3 +16,6 @@ block content
         div(class='col-sm-4')
             h3 How
             | When you navigate to an Aliasr alias, your browser is redirected to the url associated with it. If there is no url associated yet, you will be shown a waiting page. As soon as the url is available, you will be redirected.
+
+block scripts
+    script(src='/javascripts/livecount.js')
