--- a/views/stats.jade
+++ b/views/stats.jade
@@ -6,3 +6,5 @@ block content
             div(class='page-header')
                 h1 Statistics
                 p(class='lead') More detailed statistics coming soon!
+block scripts
+    script(src='/javascripts/livecount.js')
