Add loading icon to waiting page

--- a/views/waiting.jade
+++ b/views/waiting.jade
@@ -5,6 +5,7 @@ block content
         div(class='col-lg-12')
             div(class='page-header')
                 h1 Almost there!
+                img(src='/images/waiting.gif' class='no-outline')
     div(class='row')
         div(class='col-lg-12')
             p.
