--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,14 @@ html
         link(rel='stylesheet', href='/stylesheets/site.css')
         script(src='/javascripts/vendor/modernizr-2.6.2.js')
     body
-        //todo: add analytic script here
+        script.
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-42354386-2', 'aliasr.com');
+            ga('send', 'pageview');
         div(class='navbar navbar-inverse navbar-fixed-top')
             div(class='container')
                 div(class='navbar-header')
